Functional though ugly

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -32,7 +32,7 @@
                     <small id="emailHelp" class="form-text text-muted">Give a name to your burger</small>
                 </div>
                 {{!-- Submit Burger button --}}
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn btn-primary" id="submitBurger">Submit</button>
             </form>
         </div>
 
