--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -10,7 +10,7 @@
                 {{#unless devoured}}
                 {{!-- Create a list of burgers --}}
                 <li>
-                    <img src="assets/img/burger.PNG" height='50px' width='50px'>
+                    <img src="assets/img/Burger.PNG" height='50px' width='50px'>
                     {{burger_name}}
                     <button class="burgerDelete" data-id="{{id}}" data-devoured="{{devoured}}">
                         {{#unless devoured}}DEVOUR IT!{{/unless}}
@@ -25,7 +25,7 @@
         {{!-- Title card --}}
         <div class="col-4">
             <div class="card">
-                <img src="assets/img/burger.PNG" class="card-img-top titleImage" alt="King of Burgers">
+                <img src="assets/img/Burger.PNG" class="card-img-top titleImage" alt="King of Burgers">
                 <div class="card-body">
                     <h5 class="card-title">Welcome to King of Burgers</h5>
                     <p class="card-text">Submit the Burger Name to save it to our database to be devoured!</p>
